[package]
name = "blurple_hook"
version = "0.3.2"
edition = "2021"
description = "Discord webhook implementation in Rust"
license = "WTFPL"
repository = "https://github.com/0xlunar/blurple_hook"

[features]
queue = ["dep:tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["full"], optional = true }
